<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (C) 2010 Peter Dornbach.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Coloring Book</string>

    <string name="menu_new">New</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>

    <string name="dialog_saving">Saving to Pictures…</string>
    <string name="dialog_saving_ok">OK!</string>
    <string name="dialog_saving_error">Error!</string>
    <string name="dialog_share">Share image using</string>
    <!-- Credits screen -->
    <string name="credits_current_version" formatted="true">Version <xliff:g example="1.0.1" id="versionName">%1$s</xliff:g></string>

    <string name="button_go">Go</string>

    <!-- What's new dialog -->
    <string name="first_run_dialog_title">Welcome to the Coloring Book!</string>
    <string name="first_run_dialog_message">Thanks for downloading the Coloring Book\n\n
    Quick start instructions :\n
    \t• Select color and paint template with your finger.\n
    \n\n Enjoy it!\n
    </string>
    <string name="whats_new_dialog_title">What\'s new in this version of the Coloring Book</string>
    <string name="whats_new_dialog_message" formatted="true">Thanks for upgrading the Coloring Book\n\n
    <b>New in version <xliff:g example="1.0.1" id="versionName">%1$s</xliff:g>:</b>\n
    <xliff:g example="\t• Minor bugs fixes.\n" id="changelog">%2$s</xliff:g>
    \n\nEnjoy it and don\'t forget to rate it to support the development.
    </string>
    <string name="toast_double_click_back_button" tools:ignore="MissingTranslation">Please click BACK again to exit</string>
    <string name="progress_starting" tools:ignore="MissingTranslation">starting</string>
    <string name="progress_done" tools:ignore="MissingTranslation">done</string>
    <string name="progress_error" tools:ignore="MissingTranslation">an error occurred</string>
    <string name="progress_input_preview" tools:ignore="MissingTranslation">receiving image</string>
    <string name="progress_preparing_clustering" tools:ignore="MissingTranslation">preparing clustering</string>
    <string name="progress_sample_data" tools:ignore="MissingTranslation">choosing colors to classify</string>
    <string name="progress_clustering_data" tools:ignore="MissingTranslation">finding suitable colors for the image</string>
    <string name="progress_create_cluster" tools:ignore="MissingTranslation">creating classified image</string>
    <string name="progress_counting_sizes" tools:ignore="MissingTranslation">measuring areas</string>
    <string name="progress_removing_noise" tools:ignore="MissingTranslation">removing small areas which can not be painted</string>
    <string name="progress_show_cluster" tools:ignore="MissingTranslation">showing the classified image</string>
    <string name="progress_show_smoothed_image" tools:ignore="MissingTranslation">showing the image with bigger paintable areas</string>
    <string name="progress_draw_lines" tools:ignore="MissingTranslation">drawing lines around the areas</string>
    <string name="empty" translatable="false" />
    <string name="permission_read_external_storage">The app needs permission to read the external storage so you can continue painting pictures.</string>
    <string name="permission_write_external_storage">The app needs permission to save painted pictures.</string>
    <string name="permission_expand_status_bar">The app needs permission to prevent children to open the status bar.</string>
    <string name="progress_connecting_components">finding connected areas - this may take several minutes</string>
    <string name="progress_measuring_areas">measuring areas and removing small areas</string>
    <string name="progress_show_components">creating picture with components</string>
    <!-- PaintActivity: Toast when the saving button is pressed. -->
    <string name="toast_save_file">Saving as <xliff:g example="20200305-200938.png" id="fileName">%1$s</xliff:g></string>
    <!-- PaintActivity: Toast when the saving button is pressed. -->
    <string name="toast_save_file_running">Still saving as <xliff:g example="/DCIM/Coloring Book/20200305-200938.png" id="fileName">%1$s</xliff:g></string>
    <!-- PaintActivity: Toast when the saving button is pressed. -->
    <string name="toast_save_file_again">Already saved as <xliff:g example="/DCIM/Coloring Book/20200305-200938.png" id="fileName">%1$s</xliff:g></string>
    <string name="progress_convert_binary">converting image to black and white</string>
    <string name="menu_gallery">Get more Images</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <!-- Settings: Save Location: Title -->
    <string name="settings_save_location_title">Saved Pictures</string>
    <!-- Settings: Save Location: Explanation -->
    <string name="settings_save_location">The pictures will be saved to <xliff:g example="/DCIM/Coloring Book/" id="path">%1$s</xliff:g>.</string>
    <!-- Settings: Save Location: Button text to open the location where the pictures are saved. -->
    <string name="settings_open_save_location">Open</string>
    <!-- Settings: Galleries: Title -->
    <string name="settings_gallery_title">Image Galleries</string>
    <!-- Settings: Galleries: Explanation -->
    <string name="settings_galleries">Image Galleries contain much more images than the app. You can load images from the galleries into the app or show them when a new picture is created. If images are in many galleries, they are shown only once.</string>
    <string name="settings_gallery_quelltext">This is the default gallery of the maintainer. If activated, more images are downloaded on demand and can be chosen for painting.</string>
    <string name="settings_gallery_quelltext_http">This is an http version of the default gallery to allow access if https does not work.</string>
    <!-- Settings: Galleries: Button to open the gallery in a browser -->
    <string name="settings_gallery_browse">Browse</string>
    <!-- Settings: Galleries: Button to delete the gallery -->
    <string name="settings_gallery_delete">Delete</string>
    <string name="settings_galleries_user_defined">If activated, images from %1$s can be chosen in this app.</string>
    <string name="settings_galleries_resources_title">App Images</string>
    <string name="settings_galleries_resources">If activated, (recommended) the images provided by the app can be chosen for painting. Deactivate this if you do not like to see them.</string>
    <string name="settings_galleries_saved_images">If activated, (recommended) all the saved images are shown and painting them can be continued.</string>
    <string name="settings_galleries_saved_images_title">Saved Images</string>
    <string name="settings_galleries_last_painted_title">Last painted image</string>
    <string name="settings_galleries_last_painted">If activated, (recommended) the image one was painting can be clicked and resumed. If deactivated, only the back button leads back to the current painting.</string>
    <string name="error_occurred_message">An error occurred. You can send it to %1$s. Or report it at %2$s.</string>
    <string name="error_report_title">Error Report from %1$s</string>
    <string name="error_email" translatable="false">niccokunzmann@rambler.ru</string>
    <!-- Error Reporter: This is the link to the issues page https://github.com/niccokunzmann/coloring-book/issues/ -->
    <string name="error_link">shorturl.de/coloring</string>
    <string name="error_occurred_toast">Error copied to clipboard</string>
    <string name="image_list_section_description">Number of images: <xliff:g example="10">%1$d</xliff:g></string>
    <string name="permission_access_wifi_state">The app would like to have your permission to check if wifi is active, so that the app only displays images which can be accessed offline. If you do not plan to enable the online gallery in the app, you can ignore this.</string>
</resources>
