<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright (C) 2010 Peter Dornbach.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
--> 
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/open_new"
        android:icon="@drawable/outline005_house"
        android:title="@string/menu_new"
        android:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/save"
        android:title="@string/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom|withText"
        tools:ignore="AppCompatResource" />
          
    <item
        android:id="@+id/share"
        android:title="@string/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="never|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/gallery"
        android:title="@string/menu_gallery"
        android:icon="@drawable/download"
        android:showAsAction="never|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings"
        android:showAsAction="never|withText"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_about"
        android:showAsAction="never|withText"
        tools:ignore="AppCompatResource" />

</menu>
